# di-csv2xml

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  Readme.md  appveyor.yml
.github/workflows/: release.yml  test.yml
benches/: benchmark.rs  dummy_recs_200.csv
ci/: before_deploy.ps1  before_deploy.sh
src/: escape_char_data.rs  escape_str.rs  file_with_progress_bar.rs  generate_xml.rs  main.rs  read_csv.rs  record_type.rs
tests/: customer_extensions.csv  customer_extensions.xml  input.csv  lib.rs  output.xml  sem_delim.csv  simple.csv  simple_delete.xml  simple_delete_all.xml  text.csv  text.xml
