[package]
name = "di-csv2xml"
version = "2.0.4"
authors = ["Markus Klein <markus.klein@blueyonder.com>"]
license = "MIT"
publish = false
edition = "2018"

[profile.release]
lto = true
panic = "abort"

[dependencies]
quicli = "0.4.0"
csv = "1.1.3"
indicatif = "0.15.0"
strum = "0.18.0"
strum_macros = "0.18.0"
structopt = "0.3.15"
# Use patched version until upstream fixed is merged.
# https://github.com/tafia/quick-xml/pull/220
quick-xml = { git = "https://github.com/pacman82/quick-xml.git" }
flate2 = "1.0.16"
atty = "0.2.14"
humantime = "2.0.1"

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "1.0.1"
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false
