[package]
name = "di-csv2xml"
version = "2.0.5"
authors = ["Markus Klein <markus.klein@blueyonder.com>"]
license = "MIT"
publish = false
edition = "2018"

[profile.release]
lto = true
panic = "abort"

[dependencies]
quicli = "0.4.0"
csv = "1.1.6"
indicatif = "0.16.2"
strum = "0.23.0"
strum_macros = "0.23.1"
structopt = "0.3.26"
quick-xml = "0.22.0"
flate2 = "1.0.22"
atty = "0.2.14"
humantime = "2.1.0"

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
